--- a/CustomPS1/qml.qrc
+++ b/CustomPS1/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/MainScreen.qml</file>
     </qresource>
 </RCC>
